crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Call {
            opt: false,
            target: GetVar {
                name: "a",
            },
            args: [
                GetVar {
                    name: "b",
                },
            ],
        },
    ),
    [],
)
