crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Call {
        opt: false,
        target: Call {
            opt: false,
            target: GetVar {
                name: "a",
            },
            args: [
                GetVar {
                    name: "b",
                },
            ],
        },
        args: [
            GetVar {
                name: "c",
            },
        ],
    },
)
