crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix-7.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Cast(
        Cast {
            opt: false,
            target: GetVar(
                GetVar {
                    name: "a",
                },
            ),
            ty: Path(
                Path {
                    segments: [
                        Segment {
                            ident: "A",
                            generic_args: [],
                        },
                    ],
                },
            ),
        },
    ),
)
