crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix-9.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Cast {
            opt: false,
            target: Call {
                opt: false,
                target: GetIndex {
                    opt: false,
                    target: GetField {
                        opt: false,
                        target: GetVar {
                            name: "a",
                        },
                        key: "b",
                    },
                    key: GetVar {
                        name: "c",
                    },
                },
                args: [
                    GetVar {
                        name: "d",
                    },
                ],
            },
            ty: Path {
                segments: [
                    Segment {
                        ident: "E",
                        generic_args: [],
                    },
                ],
            },
        },
    ),
    [],
)
