crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_postfix.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    GetField {
        opt: false,
        target: GetVar {
            name: "a",
        },
        key: "b",
    },
)
