crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_prefix-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Unary(
        Unary {
            op: Negate,
            inner: Unary(
                Unary {
                    op: Invert,
                    inner: GetVar(
                        GetVar {
                            name: "a",
                        },
                    ),
                },
            ),
        },
    ),
)
