crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_prefix-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Unary {
        op: Invert,
        inner: Unary {
            op: Negate,
            inner: Unary {
                op: Invert,
                inner: GetVar {
                    name: "a",
                },
            },
        },
    },
)
