crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_prefix.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Unary {
            op: Invert,
            inner: GetVar {
                name: "a",
            },
        },
    ),
    [],
)
