crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_range-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
RangeEx(
    Some(
        GetVar {
            name: "a",
        },
    ),
    Some(
        GetVar {
            name: "b",
        },
    ),
)
